force-app/main/default/objects/Barcode__c/Barcode__c.object-meta.xml
<CustomObject>
    <label>FBYコード</label>
    <nameField>
        <displayFormat>FBY-{00000000}</displayFormat>
        <label>FBYコード名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>