force-app/main/default/objects/Barcode__c/fields/barcode_image__c.field-meta.xml
<CustomField>
    <fullName>barcode_image__c</fullName>
    <formula>IMAGE("https://barcodely.herokuapp.com/?code="&amp;Name,Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>バーコード</label>
    <type>Text</type>
</CustomField>