force-app/main/default/objects/Barcode__c/fields/campaign_name__c.field-meta.xml
<CustomField>
    <fullName>campaign_name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>キャンペーン</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>バーコード</relationshipLabel>
    <relationshipName>BarcodeS</relationshipName>
    <type>Lookup</type>
</CustomField>