force-app/main/default/objects/Barcode__c/fields/current_inventory__c.field-meta.xml
<CustomField>
    <fullName>current_inventory__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>現在庫</label>
    <referenceTo>CurrentInventory__c</referenceTo>
    <relationshipLabel>バーコード</relationshipLabel>
    <relationshipName>barcodes</relationshipName>
    <type>Lookup</type>
</CustomField>