force-app/main/default/objects/Barcode__c/fields/current_inventory_line__c.field-meta.xml
<CustomField>
    <fullName>current_inventory_line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>現在庫明細</label>
    <referenceTo>CurrentInventoryLine__c</referenceTo>
    <relationshipLabel>FBYコード</relationshipLabel>
    <relationshipName>barcodes</relationshipName>
    <type>Lookup</type>
</CustomField>