force-app/main/default/objects/Barcode__c/fields/donated_company__c.field-meta.xml
<CustomField>
    <fullName>donated_company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>寄贈企業</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>FBYコード</relationshipLabel>
    <relationshipName>barcodes</relationshipName>
    <type>Lookup</type>
</CustomField>