force-app/main/default/objects/Barcode__c/fields/donated_date__c.field-meta.xml
<CustomField>
    <fullName>donated_date__c</fullName>
    <label>寄贈日</label>
    <type>Date</type>
</CustomField>