force-app/main/default/objects/Barcode__c/fields/donated_person__c.field-meta.xml
<CustomField>
    <fullName>donated_person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>寄贈個人</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>FBYコード</relationshipLabel>
    <relationshipName>barcodes</relationshipName>
    <type>Lookup</type>
</CustomField>