force-app/main/default/objects/Barcode__c/fields/net_weight_per_unit__c.field-meta.xml
<CustomField>
    <fullName>net_weight_per_unit__c</fullName>
    <label>単位正味重量 (g)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>