force-app/main/default/objects/Barcode__c/fields/original_quantity__c.field-meta.xml
<CustomField>
    <fullName>original_quantity__c</fullName>
    <label>入数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>