force-app/main/default/objects/Barcode__c/fields/producer__c.field-meta.xml
<CustomField>
    <fullName>producer__c</fullName>
    <label>生産者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>