force-app/main/default/objects/Barcode__c/fields/product_condition__c.field-meta.xml
<CustomField>
    <fullName>product_condition__c</fullName>
    <label>保管状態</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>product_condition</valueSetName>
    </valueSet>
</CustomField>