force-app/main/default/objects/Barcode__c/fields/remaining_net_weight__c.field-meta.xml
<CustomField>
    <fullName>remaining_net_weight__c</fullName>
    <formula>net_weight_per_unit__c *  remaining_quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>残正味重量 (g)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>