force-app/main/default/objects/Barcode__c/fields/souko_name__c.field-meta.xml
<CustomField>
    <fullName>souko_name__c</fullName>
    <formula>current_inventory__r.warehouse__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>倉庫名</label>
    <type>Text</type>
</CustomField>