force-app/main/default/objects/Barcode__c/validationRules/quantity_check.validationRule-meta.xml
<ValidationRule>
    <fullName>quantity_check</fullName>
    <active>true</active>
    <errorConditionFormula>remaining_quantity__c &lt; 0</errorConditionFormula>
    <errorMessage>invalid quantity</errorMessage>
</ValidationRule>