force-app/main/default/objects/Barcode__c/listViews/View.listView-meta.xml
<ListView>
    <fullName>View</fullName>
    <columns>NAME</columns>
    <columns>barcode_image__c</columns>
    <columns>current_inventory__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて</label>
</ListView>