force-app/main/default/objects/Barcode__c/listViews/View1.listView-meta.xml
<ListView>
    <fullName>View1</fullName>
    <columns>NAME</columns>
    <columns>campaign_name__c</columns>
    <columns>current_inventory__c</columns>
    <columns>souko_name__c</columns>
    <columns>donated_company__c</columns>
    <columns>donated_person__c</columns>
    <columns>donated_date__c</columns>
    <columns>original_quantity__c</columns>
    <columns>shipped_quantity__c</columns>
    <columns>remaining_quantity__c</columns>
    <filterScope>Everything</filterScope>
    <label>【本日】フードドライブでの寄贈品</label>
</ListView>